<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">addactivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_addeat">Addeat</string>
    <string name="title_activity_addmovie">Addmovie</string>
    <string name="title_activity_addshopping">Addshopping</string>
    <string name="title_activity_addshow">Addshow</string>
    <string name="title_activity_addoutdoor">Addoutdoor</string>
    <string name="title_activity_addother">Addother</string>
    <string name="title_activity_addfinal">Addfinal</string>
    <string name="title_activity_addfriend">Addfriend</string>
    <string name="title_activity_newactivity">Newactivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_addfinaleat">Addfinaleat</string>
    <string name="title_activity_myactivity">Myactivity</string>
    <string name="title_activity_index">Index</string>
    <string name="title_activity_invitedac">Invitedac</string>
    <string name="title_activity_myjoinac">Myjoinac</string>
    <string name="title_activity_myjoinac_organizer">Myjoinac_organizer</string>
    <string name="title_activity_myactivity_organizer_edit">Myactivity_organizer_edit</string>
    <string name="title_activity_myjoinac_organizer_edit">Myjoinac_organizer_edit</string>
    <string name="title_activity_invitedac_voting">Invitedac_voting</string>
    <string name="title_activity_recommend_index">Recommend_index</string>
    <string name="title_activity_re_movie">Re_movie</string>
    <string name="title_activity_re_eat">Re_eat</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_voting">Voting</string>
    <string name="select_property">請選擇活動屬性</string>
    <string name="reject">婉拒</string>
    <string name="activity_name">活動名稱</string>
    <string name="movie_name">電影名稱</string>
    <string name="show_name">展覽名稱</string>
    <string name="process_addname">新增行程</string>
    <string name="process_addcontent">請輸入行程名稱或地點</string>
    <string name="des">地點</string>
    <string name="place">集合地點</string>
    <string name="time">請選擇活動時間</string>   
    <string name="cancel">刪除</string>
    <string name="cancel_correct">你確定要刪除？</string>
    <string name="organizer">主揪</string>
    <string name="addfinal">以下是你的活動細節,請再次確認</string>
    <string name="addfb">下一步 邀請FB好友</string>
    <string name="addemail">下一步 邀請EMAIL好友</string>
    <string name="backto_index">回到首頁</string>
    <string name="invite_friend">請邀請你的朋友</string>
    <string name="all">全部</string>
    <string name="unresponse">未回覆</string>
    <string name="joined">已參加</string>
    <string name="rejected">已拒絕</string>
    <string name="choice">要記得選擇喔</string>
    <string name="you_join">你參加了</string>
    <string name="you_reject">你婉拒了</string>
    <string name="voting">投票中</string>
    <string name="join">參加</string>
    <string name="reject">婉拒</string>
    <string name="vote">投票</string>
    <string name="vote_i">我要投票</string>
    <string name="vote_again">再投一次</string>
    <string name="back">返回</string>
    <string name="youare_organizer">你是主揪</string>
    <string name="youarenot_organizer">你不是主揪</string>
    <string name="decide_deadlinetime">時間決定最後期限</string>
    <string name="vote_decide_time">請選擇當天的日期時間</string>
    <string name="ok">確定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start">開始</string>
    <string name="stop">停止</string>
    <string name="my_foot">我的足跡</string>
    <string name="clean_foot">清除足跡</string>
    <string name="search">搜尋</string>
    <string name="addactivity">新增活動</string>
    <string name="classify">分類: </string>
    <string name="time_result">時間</string>
    <string name="deadlinetime_result">最終時間決定期限</string>
    <string name="edit">編輯</string>
    <string name="whether_select_deadline">請輸入期限</string>
    <string name="whether_select_time">請輸入時間</string>
    <string name="delay_nowtime">請輸入未來的時間</string>   
    <string name="please_decide_time">請選擇時間</string>
    <string name="please_decide_date">請選擇日期</string>
    <string name="vote_result">以下是大家投的時間</string>
    <string name="vote_friend_want">請投出你有空的時間</string>
    <string name="vote_deadlinetime1">要在</string>
    <string name="vote_deadlinetime2">以前完成投票喔!!!</string>
    <string name="vote_deadlinetime3">以前決定好是否要參加喔!!!</string>   
    <string name="title_activity_server__map">Server_MAP</string>
    <string name="title_activity_map">MAP</string>
    <string name="title_activity_swipe">Swipe</string>
    <string name="title_activity_reject">Reject</string>
	<string name="time_select_organizer">時間修改中</string>
	<string name="invite_new_friend">+FB朋友</string>
	<string name="invite_new_emailfriend">+EMAIL朋友</string>
	<string name="add_now_time">立即決定時間</string>
	<string name="delay_time">請輸入較期限更未來的日期</string>
	<string name="chatroom">聊天室</string>
	<string name="noone_join">未有人參加</string>
	<string name="noone_reject">未有人婉拒</string>
	<string name="noone_invited">未有受邀者</string>
	<string name="friend_invited">受邀者</string>
	<string name="undifine">未定中</string>
	<string name="change_deadlinetime">要記得更改期限喔</string>
	<string name="deadlinetime">請設定最後確認的時間</string>
	<string name="delay_deadlinetime">請不要越過活動時間</string>
	 <string name="organizer_deciding_time">主糾正在決定 </string>
	 <string name="select_time_notyet">請選擇活動時間 </string>
	 <string name="process">行程規劃</string>
	 <string name="whether_select_process">請加入行程規劃</string>
	    <string name="process_name">加入行程規劃</string>
    <!-- inviteContacts -->
    <string name="send_request">Send Request</string>
  <!-- Chatroom -->
    <string name="prompt_chat">請輸入留言</string>
    <string name="send_button">送出</string>
</resources>