<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Myjoinac_organizer" 
    android:id="@+id/relative"
    android:background="@drawable/background">
    
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="420dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/LL">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_name"
        android:id="@+id/tname"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/editname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:id="@+id/tmovie"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"       />

    <EditText
        android:id="@+id/editmovie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        style="@style/my_edittext_style_movie"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_name"
        android:id="@+id/tshow"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"    />

    <EditText
        android:id="@+id/editshow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        style="@style/my_edittext_style_show" />
    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des"
        android:id="@+id/tdes"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"        />

    <EditText
        android:id="@+id/editdes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp" />
 
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/place"
        android:id="@+id/tplace"
        android:textSize="15sp"
		android:textColor="#000000"       />

    <EditText
        android:id="@+id/editplace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
           android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="10dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/ttime"
        android:textSize="15sp"
        android:textColor="#000000"       />
    
    <Button
        android:id="@+id/btntime"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/ttime"
        android:layout_alignParentRight="true"
        android:layout_marginRight="130dp" />
     <Button
        android:id="@+id/btntime_now"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/ttime"
        android:background="@layout/button_border2"
        android:text="@string/add_now_time"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/taddtime"
        android:textSize="15sp"
        android:textColor="#000000"        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadlinetime"
        android:id="@+id/tdeadline"
        android:textSize="15sp"
        android:textColor="#000000" />
    
    <Button
        android:id="@+id/btndeadlinetime"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tdltime"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:id="@+id/tdeadlinetime"
        android:background="@layout/backtest7" 
   		android:padding="5dp"
        android:textColor="#000000"/>        
         <View 
        android:layout_width="fill_parent"
        android:layout_height="20sp" />


    </LinearLayout>
    </ScrollView>
     <Button
        android:id="@+id/btnaddfriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/invite_new_friend"
        android:background="@layout/button_border2"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
         />

    <Button
        android:id="@+id/btneditcomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok"
        android:background="@layout/button_border2"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
         />

</RelativeLayout>