<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@drawable/background">
  <TextView
    android:id="@+id/message_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
   <EditText
    android:id="@+id/editaddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp">
  <Button
        android:id="@+id/btnaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"     
        android:text="@string/search"
        android:onClick="showMyLocation"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@layout/button_border2"/>

  <Button
      android:id="@+id/btnstop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:text="@string/start" 
      android:textSize="15sp"
        android:textColor="#FFFFFF"
      android:background="@layout/button_border2"/>
   <Button
      android:id="@+id/btnclean"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
	  android:layout_alignParentRight="true"
      android:layout_marginRight="10dp"
      android:text="@string/clean_foot" 
      android:textSize="15sp"
      android:textColor="#FFFFFF"
      android:background="@layout/button_border2"/>

  </RelativeLayout>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">
    
    <fragment 
      android:id="@+id/map"
      
      android:layout_width="match_parent"
      android:layout_height="300dp"
      class="com.google.android.gms.maps.SupportMapFragment"/>

  </RelativeLayout>
</LinearLayout>





