<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Invitedac"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <RelativeLayout 
    android:id="@+id/relative"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
      <Button
        android:id="@+id/btnchatroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
 		android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@layout/button_border2"
        android:text="@string/chatroom"
		android:textSize="15sp"
        android:textColor="#FFFFFF"/> 
        
      <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:layout_below="@+id/btnchatroom" 
	    	android:layout_centerHorizontal="true"  	    	  	    
	   		android:layout_marginTop="10dp"
	    	android:background="@drawable/cardboard_texture_vertical"
	    	android:id="@+id/ll">
	    	<TextView
                android:id="@+id/tname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"                                           
				android:layout_marginTop="10dp"
     		    android:textSize="20dp"  		    
     		    android:gravity="center"
      		    android:textColor="#000000" />

     <TextView
                android:id="@+id/tinvitedac"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"               
     		    android:padding="15dp"
     		    android:textSize="15dp"
     		    android:lineSpacingExtra="5dip"   		        		    
      		    android:textColor="#000000" />
</LinearLayout>
    <Button
        android:id="@+id/btnjoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll"
        android:layout_marginTop="15dp"
        android:text="@string/join" 
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@layout/button_border2" />

    <Button
        android:id="@+id/btnreject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"       
        android:text="@string/reject" 
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@layout/button_border2" />

    <Button
        android:id="@+id/btnvote" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll"
        android:layout_marginTop="15dp"
        android:text="@string/vote_i" 
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@layout/button_border2"/>
</RelativeLayout>

</LinearLayout>
</ScrollView>